<resources>
    <string name="notification_channel_name_common">常规</string>
    <string name="app_menu_update">更新</string>
    <string name="app_update_download_dialog">是否下载最新快照版本</string>
    <string name="settings_github_raw_root_url">GitHub raw根URL</string>
    <string name="app_menu_git_log">git log</string>
    <string name="app_menu_switch_themes">切换主题</string>
    <string name="app_menu_wake_lock">Wake lock</string>
    <string name="app_menu_wake_lock_acquire">ACQUIRE</string>
    <string name="app_menu_wake_lock_release">RELEASE</string>
    <string name="wake_lock_already_acquired_toast">已获取wake lock</string>
    <string name="wake_lock_already_held_toast">已持有wake lock</string>
    <string name="wake_lock_held_success">获取成功</string>
    <string name="wake_lock_no_held">未获取wake lock</string>
    <string name="wake_lock_release_success">释放成功</string>
    <string name="app_menu_test">测试</string>
    <string name="app_menu_little_tools">小工具</string>
    <string name="app_download_confirmation_dialog_title">是否确认下载</string>
    <string name="app_unsupported_abi">不支持的ABI</string>
    <string name="app_data_transfer_title">应用数据转移</string>
    <string name="settings_import_data_restart_dialog_msg">数据导入后需重启应用</string>
    <string name="app_about_label">关于</string>
    <string name="app_about_menu">@string/app_about_label</string>
    <string name="app_list_toggle_app_shortcut">创建/删除应用快捷方式</string>
    <string name="app_list_create_pinned_shortcut">创建固定快捷方式</string>
    <string name="cancel_btn">取消</string>
    <string name="empty" translatable="false"/>
    <string name="percentage">%1$f%%</string>
    <string name="please_enter_correct_value_toast">请输入正确的值</string>
    <string name="mkdir_failed">创建文件夹失败</string>
    <string name="save_success_toast">保存成功</string>
    <string name="filename_hint">文件名</string>
    <string name="adding_succeeded">添加成功</string>
    <string name="delete_button">删除</string>
    <string name="process_done">完成</string>
    <string name="importing_succeeded">导入成功</string>
    <string name="exporting_succeeded">导出成功</string>
    <string name="menu_import">导入</string>
    <string name="menu_export">导出</string>
    <string name="set_done_toast">已设置</string>
    <string name="tts_speak_error">TTS播放出错</string>
    <string name="create_shortcut">创建快捷方式</string>
    <string name="reset_success_toast">重置成功</string>
    <string name="add_button">添加</string>
    <string name="create_new">新建</string>
    <string name="getting_information">正在获取信息</string>
    <string name="getting_information_failed">获取信息失败</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_confirmation_dialog_title">是否删除</string>
    <string name="menu_btn">菜单</string>
    <string name="option_btn">选项</string>
    <string name="updating">正在更新</string>
    <string name="add_new">新增</string>
    <string name="unsupported_function_toast">功能不支持</string>
    <string name="failed_to_get_content_toast">获取内容失败</string>
    <string name="clipboard_copy_failed_toast">复制失败</string>
    <string name="clipboard_copy_success_toast">复制成功</string>
    <string name="shortcut_deletion_msg">已删除快捷方式</string>
    <string name="shortcut_size_limit_exceeded_msg">超出数量限制</string>
    <string name="shortcut_create_success_toast">创建快捷方式成功</string>
    <string name="not_support_pinned_shortcut_toast">您的手机不支持此类型快捷方式</string>
    <string name="create_pinned_shortcut_action_name">添加到桌面</string>
    <string name="regex">正则表达式</string>
    <string name="regex_bad_pattern">正则表达式有误</string>
    <string name="io_error">IO异常</string>
    <string name="function_not_implemented_toast">还未实现此功能</string>
    <string name="processing_msg">正在处理</string>
    <string name="switch_switch_label">开关</string>
    <string name="empty_button">清空</string>
    <string name="time_is_">时间：%1$s</string>
    <string name="no_app_to_open">没有可供打开的应用</string>
    <string name="pick_file_btn">选择文件</string>
    <string name="file_path_hint">文件路径</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="text">文本</string>
    <string name="looking_up">正在查询</string>
    <string name="none">无</string>
    <string name="qr_code">二维码</string>
    <string name="copy_button">复制</string>
    <string name="undo">撤消</string>
    <string name="deleted_message">已删除</string>
    <string name="import_dialog">导入</string>
    <string name="export_dialog">导出</string>
    <string name="corrupt_database_and_recreate_new_msg">数据库损坏，已重新创建新的数据库</string>
    <string name="corrupt_imported_database_toast">导入的数据库已损坏</string>
    <string name="delete_menu">@string/delete_button</string>
    <string name="select_all_btn">全选</string>
    <string name="hardware_acceleration">硬件加速</string>
    <string name="exit_menu">退出</string>
    <string name="modification_succeeded">修改成功</string>
    <string name="importing_failed">导入失败</string>
    <string name="media_play_button">播放</string>
    <string name="media_pause_button">暂停</string>
    <string name="moving_files_progress_dialog">正在移动</string>
    <string name="network_fetching">正在获取……</string>
    <string name="invalid_response_toast">无效数据</string>
    <string name="action_today_label">今天</string>
    <string name="ignore_case">忽略大小写</string>
    <string name="text_encoding_menu">编码</string>
    <string name="file_open_failed_toast">打开文件失败</string>
    <string name="creating_archive_msg">正在创建归档</string>
    <string name="restart_title">重启</string>
    <string name="importing_dialog_title">正在导入</string>
    <string name="exporting_dialog_title">正在导出</string>
    <string name="extracting_archive_msg">解压中……</string>
    <string name="failed_to_save_file_toast">保存文件失败</string>
    <string name="file_already_exists_dialog_message">当时目录下文件已存在，继续将覆盖</string>
    <string name="file_title">文件</string>
    <string name="file_path_please_use_open_as_hint">（请使用“打开为……”打开）</string>
    <string name="multiple_selection">多选</string>
    <string name="app_name" translatable="false">Tools</string>
    <string name="str" translatable="false">%1$s</string>
    <string name="progress_tv" translatable="false">%1$f%%</string>
    <string name="select_file_or_directory">选择文件/目录</string>
    <string name="encode">编码</string>
    <string name="decode">解码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="encode_done">编码完成</string>
    <string name="decode_done">解码完成</string>
    <string name="null_file">为空文件</string>
    <string name="native_error">内部错误</string>
    <string name="file_open_error">打开文件错误</string>
    <string name="incorrect_file_extension">格式不正确</string>
    <string name="all_file_encoded_done">所有文件编码完成！</string>
    <string name="all_file_decoded_done">所有文件解码完成！</string>
    <string name="have_task">正在进行任务</string>
    <string name="type_path">输入路径</string>
    <string name="no_access">无此路径或无权访问</string>
    <string name="nul" translatable="false"/>
    <string name="null_string">null</string>
    <string name="filter">过滤器</string>
    <string name="iFileExtension">操作文件扩展名</string>
    <string name="oFileExtension">输出文件类型</string>
    <string name="settings">设置</string>
    <string name="expression_error">json表达错误</string>
    <string name="json_solve_error">json解析失败：</string>
    <string name="delete_old_file">完成后是否删除原文件</string>
    <string name="generate_pi">计算Pi</string>
    <string name="calc">计算</string>
    <string name="pi______type">输入小数点后位数：</string>
    <string name="please_wait">请等待……</string>
    <string name="toast" translatable="false">Toast</string>
    <string name="copy">复制</string>
    <string name="html_clipboard_unsupported">android版本不支持HTML放入剪切板</string>
    <string name="copying_succeeded">复制成功</string>
    <string name="html_content">html内容</string>
    <string name="put_in_clipboard">放入剪切板</string>
    <string name="tv_millis" translatable="false">%1dms</string>
    <string name="some_codecs">some-codecs</string>
    <string name="type_html_code">输入HTML代码</string>
    <string name="get_config_file_failed">获取配置文件路径失败</string>
    <string name="whether_to_save">是否保存</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="pick_color">选择颜色</string>
    <string name="start_floating_window">开启悬浮窗</string>
    <string name="stop_floating_window">关闭悬浮窗</string>
    <string name="drawing">绘画</string>
    <string name="controlling">操控</string>
    <string name="drawing_mode">绘画</string>
    <string name="eraser_mode">擦除</string>
    <string name="alpha" translatable="false">alpha</string>
    <string name="done">完成</string>
    <string name="hsva_color_picker">HSVA调色板</string>
    <string name="control_panel_color">面板颜色</string>
    <string name="text_color">文字颜色</string>
    <string name="whether_text_color_is_inverted">是否文字颜色反相</string>
    <string name="not_be_killed">防杀进程</string>
    <string name="floating_drawing_board">悬浮画板</string>
    <string name="whether_to_clear">是否清空</string>
    <string name="whether_to_hide">是否隐藏</string>
    <string name="whether_to_exit">是否退出</string>
    <string name="fourier_series_calc">傅里叶级数验证计算</string>
    <string name="type_n_num">输入合成正弦波项数</string>
    <string name="record">记录</string>
    <string name="notes">笔记</string>
    <string name="export">导出</string>
    <string name="import_">导入</string>
    <string name="add_symbol">+</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="i">i</string>
    <string name="e">e</string>
    <string name="caret">^</string>
    <string name="t">t</string>
    <string name="start">开始</string>
    <string name="random">随机</string>
    <string name="drawing_graph">绘图</string>
    <string name="definite_n">积分分段数</string>
    <string name="period">周期</string>
    <string name="epicycles_count">本轮数量</string>
    <string name="thread_num">线程数</string>
    <string name="sort">排序</string>
    <string name="filename_is">文件名：%1$s</string>
    <string name="invert_text_color">文字颜色反相</string>
    <string name="follow_painting_color">跟随笔刷颜色</string>
    <string name="write_diary">写日记</string>
    <string name="create">创建</string>
    <string name="attachment">附件</string>
    <string name="pick_file">选择文件</string>
    <string name="description">描述</string>
    <string name="type">类型</string>
    <string name="raw">原始</string>
    <string name="submit">提交</string>
    <string name="storage_type_is">存储类型：%1$s</string>
    <string name="addition_time_is">添加时间：%1$s</string>
    <string name="attachment_local_storage_path_is">附件本地存储目录：</string>
    <string name="change">修改</string>
    <string name="restore_to_default">恢复默认</string>
    <string name="diary_file_preview_description_is">描述：</string>
    <string name="diary_file_preview_content_is">内容：</string>
    <string name="diary_advanced_search_menu">高级搜索</string>
    <string name="diary_menu_statistics">统计</string>
    <string name="diary_menu_random">随机</string>
    <string name="fdb_panel_settings_panel_color_tv">面板颜色</string>
    <string name="fdb_panel_settings_panel_text_color_tv">文字颜色</string>
    <string name="fdb_panel_settings_follow_brush_color_switch">跟随笔刷颜色</string>
    <string name="fdb_panel_settings_invert_text_color_switch">文字颜色反相</string>
    <string name="email_smtp_server_et_hint">SMTP服务器</string>
    <string name="email_from_account_et_hint">使用的发送帐号</string>
    <string name="task_notes_item_show_type_menu">展示</string>
    <string name="task_notes_item_show_today">当天</string>
    <string name="task_notes_item_show_all">全部</string>
    <string name="course_table_course_name_tv">课程名称：%1$s</string>
    <string name="course_table_course_location_tv">上课地点：%1$s</string>
    <string name="course_table_course_teacher_tv">教师：%1$s</string>
    <string name="course_table_course_time_tv">时间：%1$s</string>
    <string name="course_table_course_date_tv">日期：%1$s</string>
</resources>