<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/write_diary"
        android:title="@string/write_diary"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/create"
        android:title="@string/create"
        app:showAsAction="never"/>
    <item
        android:id="@+id/password"
        android:title="@string/password"
        app:showAsAction="never"/>
    <item
        android:id="@+id/import_"
        android:title="@string/import_"
        app:showAsAction="never"/>
    <item
        android:id="@+id/export"
        android:title="@string/export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/statistics"
        android:title="@string/diary_menu_statistics"
        app:showAsAction="never"/>
    <item
        android:id="@+id/advanced_search"
        android:title="@string/diary_advanced_search_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/random"
        android:title="@string/diary_menu_random"
        app:showAsAction="never"/>
    <item
        android:id="@+id/multi_select"
        android:title="@string/multiple_selection"
        app:showAsAction="never"/>
</menu>
