<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/update"
        android:title="@string/app_menu_update"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/app_about_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/switch_themes"
        android:title="@string/app_menu_switch_themes"
        app:showAsAction="never"/>
    <item android:title="@string/app_menu_wake_lock">
        <menu>
            <item
                android:id="@+id/wake_lock_acquire"
                android:title="@string/app_menu_wake_lock_acquire"/>
            <item
                android:id="@+id/wake_lock_release"
                android:title="@string/app_menu_wake_lock_release"/>
        </menu>
    </item>
    <item
        android:id="@+id/exit"
        android:title="@string/exit_menu"/>
</menu>
