<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/task_notes_item_show_type_menu"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/show_type"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/show_today"
                    android:checked="true"
                    android:title="@string/task_notes_item_show_today"/>
                <item
                    android:id="@+id/show_all"
                    android:title="@string/task_notes_item_show_all"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/create_shortcut"
        android:title="@string/create_shortcut"/>
</menu>
