<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10sp"
>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/attachment_local_storage_path_is"
              android:textSize="20sp"
              android:gravity="center"
    />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textSize="20sp"
              android:text="@string/str"
              android:id="@+id/storage_path_tv"
              android:gravity="center"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/change_btn"
            android:layout_gravity="center"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/restore_to_default"
            android:id="@+id/restore_to_default_btn"
            android:layout_gravity="center"
            />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/done"
            android:id="@+id/done_btn"
            android:layout_gravity="center"
    />
</LinearLayout>