<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/ll"
>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/control_panel_color"
            android:id="@+id/panel_color"
    />
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/text_color"
            android:id="@+id/text_color"
    />
    <Switch android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/follow_painting_color"
            android:id="@+id/follow_painting_color"
    />
    <Switch android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/invert_text_color"
            android:id="@+id/invert_text_color"
    />
</LinearLayout>