<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="10sp"
    >
        <pers.zhc.tools.utils.SmartHintEditText
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/picked_file_et"
                app:hint="@string/文件路径"
        />
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/pick_file"
                android:textSize="20sp"
                android:id="@+id/pick_file_btn"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
        />
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:hint="@string/description"
                  android:inputType="textMultiLine"
                  android:gravity="top"
                  tools:ignore="Autofill"
                  android:id="@+id/description_et"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/type"
                  android:textSize="20sp"
                  android:textColor="@color/black"
        />
        <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/storage_type_rg"
        >
            <RadioButton android:layout_width="0sp" android:layout_height="wrap_content"
                         android:text="@string/raw"
                         android:layout_weight="1"
                         android:id="@+id/raw_radio"
            />
            <RadioButton android:layout_width="0sp" android:layout_height="wrap_content"
                         android:text="@string/text"
                         android:layout_weight="1"
                         android:id="@+id/text_radio"
            />
        </RadioGroup>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="20sp"
                android:id="@+id/submit_btn"
                android:layout_gravity="center"
        />
    </LinearLayout>
</ScrollView>